# runtime-llvm-plugin

./: CMakeLists.txt  Doxyfile.in  FindLLVM.cmake  LICENSE  Makefile  README  README.md
include/: AccessorGenerator.h  CMakeLists.txt  Context.h  GCObject.h  GCParams.h  GCType.h  GCTypeRealizer.h  GCTypeTraceGen.h  GCTypeVisitors.h  GenType.h  GenTypeVisitors.h  ParseMetadataPass.h  TraceGenerator.h  TypeBuilder.h  TypeRealizer.h  metadata.h
src/: CMakeLists.txt  GCParams.cpp  GCType.cpp  GCTypePrintVisitor.cpp  GCTypeRealizer.cpp  GCTypeTraceGen.cpp  GCTypeVisitors.cpp  GenType.cpp  GenTypePrintVisitor.cpp  GenTypeVisitors.cpp  Makefile  ParseMetadataPass.cpp  TraceGenerator.cpp  TypeBuilder.cpp  TypeRealizer.cpp
src/test/: RunTests.cpp
src/test/UnitTest/: GCParamsUnitTest.cpp  GCTypeUnitTest.cpp
src/test/UnitTests/: GCParamsUnitTest.cpp  GCTypeUnitTest.cpp
test/unit/: CMakeLists.txt  GCParamsUnitTest.cpp  GenTypeUnitTest.cpp  unit_test_main.cpp
